# cuems-utils

./: .gitignore  404.html  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONNECTION_HEALTH_EXAMPLE.md  CONTRIBUTORS.md  OSC_NODES_EXAMPLE.py  OSC_NODES_HUB_GUIDE.md  OSC_NODES_IMPLEMENTATION_SUMMARY.md  PING_PONG_GUIDE.md  PLAYER_BASED_ARCHITECTURE.md  QUICK_START_OSC_NODES.md  QUICK_START_OSC_PLAYERS.md  README.md  README_PLAYERS.md  REFACTORING_BASE_CLASS_QUEUES.md  REFACTORING_COMPLETE.md  TCP_MIGRATION_NOTES.md  ToDo.md  bus_test.py  bus_test_slave.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_bus_controller.py  test_bus_node.py  test_osc_hub_controller.py  test_osc_hub_node.py  test_player_queue.py
.claude/: settings.json  settings.local.json
.cursor/rules/: specify-rules.mdc
.github/workflows/: gh-pages.yml  pypi-publish.yml  tests.yml
.pybuild/cpython3_3.11/: .pydistutils.cfg
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: index.html
canvas_region/: index.html
cues/: index.html
debian/: README.Debian  changelog  control  copyright  cuems-utils.postinst.debhelper  cuems-utils.prerm.debhelper  cuems-utils.substvars  debhelper-build-stamp  files  install  rules
debian/.debhelper/cuems-utils/: dbgsym-build-ids
debian/.debhelper/cuems-utils/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/cuems-utils/dbgsym-root/usr/share/doc/: cuems-utils-dbgsym
debian/cuems-utils/DEBIAN/: control  md5sums  postinst  prerm  triggers
dev/: parsers.py  test_bus_controller.py  test_bus_node.py
docs/: api.md  canvas_region.md  ctimecode-migration-for-fade-engine.md  cues.md  index.md  tools.md  xml.md
search/: search_index.json
specs/001-mediacue-fading-function/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mediacue-fading-function/checklists/: requirements.md
specs/001-mediacue-fading-function/contracts/: mediacue-fade-xml-contract.md
specs/002-timecode-qf-timer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-timecode-qf-timer/checklists/: requirements.md
specs/002-timecode-qf-timer/contracts/: CTimecodeTimer.md
specs/003-fade-cue/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-fade-cue/checklists/: requirements.md
src/cuems-utils/: __init__.py  logging.py
src/cuemsutils/: CTimecode.py  CommunicatorServices.py  ComunicatorServices.py  CopyMoveVersioned.py  Settings.py  Uuid.py  __init__.py  create_script.py  daemon.py  helpers.py  log.py  timeoutloop.py
src/cuemsutils/cues/: ActionCue.py  AudioCue.py  Cue.py  CueList.py  CueOutput.py  CuemsScript.py  DmxCue.py  FadeCue.py  FadeProfile.py  MediaCue.py  VideoCue.py  __init__.py  arm_cue.py  run_cue.py
src/cuemsutils/tools/: CTimecode.py  CTimecodeTimer.py  CommunicatorServices.py  ConfigBase.py  ConfigManager.py  CopyMoveVersioned.py  FadeCalculator.py  HubServices.py  SignalEngine.py  StringSanitizer.py  Uuid.py  __init__.py
src/cuemsutils/xml/: CMLCuemsConverter.py  DictParser.py  Parsers.py  Settings.py  XmlBuilder.py  XmlReaderWriter.py  __init__.py
src/cuemsutils/xml/schemas/: network_map.xsd  outputs.xsd  project_mappings.xsd  project_settings.xsd  script.xsd  settings.xsd
templates/: settings.xml
tests/: __init__.py  conftest.py  test builders parsers XML.py  test_canvas_region_roundtrip.py  test_communicatorservices.py  test_configmanager.py  test_cue.py  test_cue_output.py  test_cuelist.py  test_fade_cue.py  test_funcdict.py  test_helpers.py  test_hubservices.py  test_logger.py  test_project_mappings.py  test_signalengine.py  test_superproperty.py  test_version.py  test_xml.py  testdev_nng_talk.py  testdev_xml.py
tests/contract/: test_mediacue_fade_schema_contract.py
tests/data/: default_mappings.xml  network_map.xml  project_mappings.xml  sample_script.json  settings.xml  settings_bad_dmx_auto.xml
tests/integration/: test_create_script_completeness.py  test_default_mappings_valid.py  test_mediacue_fade_performance.py  test_mediacue_fade_roundtrip.py
tests/unit/: test_ctimecode.py  test_ctimecode_timer.py  test_fade_calculator.py  test_media_duration.py  test_mediacue_fade_profile.py
tools/: index.html
xml/: index.html
