[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuems-utils"
dynamic = ["version"]
description = "Reusable classes and methods for CueMS system"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Adrià Masip", email = "adria.back@gmail.com" },
  { name = "Ion Reguera", email = "ion@stagelab.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
Documentation = "https://github.com/stagesoft/cuems-utils#readme"
Issues = "https://github.com/stagesoft/cuems-utils/issues"
Source = "https://github.com/stagesoft/cuems-utils"

[tool.hatch.version]
path = "src/cuems-utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cuems-utils"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cuems-utils tests}"

[tool.coverage.run]
source_pkgs = ["cuems-utils", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
cuems-utils = ["src/cuems-utils", "*/cuems-utils/src/cuems-utils"]
tests = ["tests", "*/cuems-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
