[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuemsutils"
dynamic = ["version"]
description = "Reusable classes and methods for CueMS system"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "Adrià Masip", email = "adria.back@gmail.com" },
  { name = "Ion Reguera", email = "ion@stagelab.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "timecode",
    "lxml==5.3.0",
    "xmlschema==3.4.3"
]

[project.urls]
Documentation = "https://github.com/stagesoft/cuems-utils#readme"
Issues = "https://github.com/stagesoft/cuems-utils/issues"
Source = "https://github.com/stagesoft/cuems-utils"

[tool.hatch.version]
path = "src/cuemsutils/__init__.py"

[tool.hatch.build]
include = ["src/cuemsutils/xml/schemas"]

[tool.hatch.build.targets.wheel]
packages = ["src/cuemsutils"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11"]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage[toml]"
]

[tool.coverage.run]
source_pkgs = ["cuemsutils", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
cuemsutils = ["src/cuemsutils", "*/cuems-utils/src/cuemsutils"]
tests = ["tests", "*/cuems-utils/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cuemsutils tests}"
