[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuemsutils"
dynamic = ["version"]
description = "Reusable classes and methods for CueMS system"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "Adrià Masip", email = "adria.back@gmail.com" },
  { name = "Ion Reguera", email = "ion@stagelab.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "deprecated==1.2.18",
    "json-fix==1.0.0",
    "timecode",
    "pynng==0.8.1",
    # CVE-2026-41066 (high): lxml <6.1.0 — XXE via iterparse()/ETCompatXMLParser()
    # with resolve_entities=True default. cuems-utils ONLY uses lxml.etree.Element
    # and lxml.etree.register_namespace (CMLCuemsConverter.py); the vulnerable
    # parser APIs are never called, so active risk is zero.
    # Upgrade path: lxml==6.1.0 fixes it (resolve_entities default → 'internal').
    # Requires extensive testing of all XML round-trips (XmlReaderWriter, XmlBuilder,
    # xmlschema validation, project load/save) before bumping — 6.x is a major
    # version and lxml is on the critical path for every project file.
    "lxml==5.3.0",
    "xmlschema==3.4.3",
    "websockets==14.1",
    "peewee==3.17.8",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
systemd = [
    "systemd-python==235",
]
all = [
    "systemd-python==235",
    "pynng==0.8.1",
]

[project.urls]
Documentation = "https://github.com/stagesoft/cuems-utils#readme"
Issues = "https://github.com/stagesoft/cuems-utils/issues"
Source = "https://github.com/stagesoft/cuems-utils"

[tool.hatch.version]
path = "src/cuemsutils/__init__.py"

[tool.hatch.build]
include = ["src/cuemsutils/xml/schemas"]

[tool.hatch.build.targets.sdist]
packages = ["src/cuemsutils"]

[tool.hatch.build.targets.wheel]
packages = ["src/cuemsutils"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.metadata]
allow-direct-references = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.hatch-test.env-vars]
PKG_CONFIG_PATH = "/usr/lib/x86_64-linux-gnu/pkgconfig"
CC = "gcc"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage[toml]",
  "ruff",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests/}"
run-cov = "pytest --cov {args:tests/}"
lint = "ruff check {args:src/ tests/}"

[tool.coverage.run]
source_pkgs = ["cuemsutils", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
cuemsutils = ["src/cuemsutils", "*/cuems-utils/src/cuemsutils"]
tests = ["tests", "*/cuems-utils/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cuemsutils tests}"
